<resources>
    <string name="app_name">CodepathFlashcards</string>
    <string name="flashcard_1">What is the longest land border shared between two countries?</string>
    <string name="flashcard_1_answer">US-Canada Border</string>
    <string name="flashcard_1_a1">Europe-Russia Border</string>
    <string name="flashcard_1_a2">US-Canada Border</string>
    <string name="flashcard_1_a3">Russia-China Border</string>

    <string name="no_cards">You have no cards to display!</string>
</resources>